--- a/.github/workflows/markdownlint.yaml
+++ b/.github/workflows/markdownlint.yaml
@@ -23,5 +23,5 @@ jobs:
     - uses: articulate/actions-markdownlint@v1
       name: markdown-lint
       with:
-        files: 'ansible/**/*.md'
+        files: 'hashicorp/packer/**/*.md'
         version: 0.37.0
