--- a/.github/workflows/markdownlint.yaml
+++ b/.github/workflows/markdownlint.yaml
@@ -21,7 +21,8 @@ jobs:
       uses: actions/checkout@v3
 
     - uses: articulate/actions-markdownlint@v1
-      name: markdown-lint
+      name: markdown-lint - Packer
       with:
+        config: .markdownlint.json
         files: 'hashicorp/packer/**/*.md'
         version: 0.37.0
