--- a/.github/workflows/markdownlint.yaml
+++ b/.github/workflows/markdownlint.yaml
@@ -1,4 +1,4 @@
-name: certifications-notes CI
+name: certifications-notes markdownlint
 
 on:
   push:
@@ -67,3 +67,10 @@ jobs:
       with:
         config: .markdownlint.json
         files: 'vmware/**/**/*.md'
+
+    - uses: articulate/actions-markdownlint@v1
+      name: markdown-lint - Green Software Practitioner
+      if: (success() || failure())
+      with:
+        config: .markdownlint.json
+        files: 'green-software-for-practitioners/**/**/*.md'
