--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -6,14 +6,14 @@ on:
   pull_request:
     branches: [ "main" ]
 
+permissions:
+  contents: write
+
 jobs:
-
   markdown-ci:
-
     defaults:
       run:
         shell: bash
-
     runs-on: ubuntu-latest
 
     steps:
@@ -74,3 +74,27 @@ jobs:
       with:
         config: .markdownlint.json
         files: 'green-software-for-practitioners/**/**/*.md'
+
+  deploy-mkdocs:
+    defaults:
+      run:
+        shell: bash
+    runs-on: ubuntu-latest
+
+    steps:
+    - name: Chekout the Repo
+      uses: actions/checkout@v4
+    - name: Configure Git Credentials
+      run: |
+        git config user.name github-actions[bot]
+        git config user.email 41898282+github-actions[bot]@users.noreply.github.com
+    - uses: actions/setup-python@v5
+      name: Setup Python
+      with:
+        python-version: 3.x
+    - run: pip install mkdocs-material
+    - run: pip install pymdown-extensions
+    - run: pip install mkdocs-glightbox
+    - run: pip install mkdocs-section-index
+    - run: pip install mkdocs-literate-nav
+    - run: mkdocs gh-deploy --force
