--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -21,65 +21,17 @@ jobs:
       uses: actions/checkout@v4
 
     - uses: articulate/actions-markdownlint@v1
-      name: markdown-lint - Ansible
+      name: markdown-lint - Certifications
       with:
         config: .markdownlint.json
-        files: 'ansible/**/*.md'
-
-    - uses: articulate/actions-markdownlint@v1
-      name: markdown-lint - AWS
-      if: (success() || failure())
-      with:
-        config: .markdownlint.json
-        files: 'aws/**/**/*.mdc'
-
-    - uses: articulate/actions-markdownlint@v1
-      name: markdown-lint - Packer
-      if: (success() || failure())
-      with:
-        config: .markdownlint.json
-        files: 'hashicorp/packer/**/*.md'
-
-    - uses: articulate/actions-markdownlint@v1
-      name: markdown-lint - Terraform
-      if: (success() || failure())
-      with:
-        config: .markdownlint.json
-        files: 'hashicorp/terraform/**/*.md'
-
-    - uses: articulate/actions-markdownlint@v1
-      name: markdown-lint - Vault
-      if: (success() || failure())
-      with:
-        config: .markdownlint.json
-        files: 'hashicorp/vault/**/*.md'
-
-    - uses: articulate/actions-markdownlint@v1
-      name: markdown-lint - Kubernetes and GitOps
-      if: (success() || failure())
-      with:
-        config: .markdownlint.json
-        files: 'kubernetes/**/**/*.md'
-
-    - uses: articulate/actions-markdownlint@v1
-      name: markdown-lint - VMware
-      if: (success() || failure())
-      with:
-        config: .markdownlint.json
-        files: 'vmware/**/**/*.md'
-
-    - uses: articulate/actions-markdownlint@v1
-      name: markdown-lint - Green Software Practitioner
-      if: (success() || failure())
-      with:
-        config: .markdownlint.json
-        files: 'green-software-for-practitioners/**/**/*.md'
+        files: 'docs/certifications/*.md'
 
   deploy-mkdocs:
     defaults:
       run:
         shell: bash
     runs-on: ubuntu-latest
+    needs: markdown-ci
 
     steps:
     - name: Chekout the Repo
