--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -55,4 +55,5 @@ jobs:
     - run: pip install mkdocs-glightbox
     - run: pip install mkdocs-section-index
     - run: pip install mkdocs-literate-nav
+    - run: pip install mkdocs-exclude
     - run: mkdocs gh-deploy --force
